--- a/github-info/src/styles/profile.scss
+++ b/github-info/src/styles/profile.scss
@@ -1,49 +1,68 @@
-.user-info {
-  display: flex;
-  flex-direction: row;
-  margin-left: 20px;
-  margin-top: 40px;
-
-  img {
-    width: 375px;
-    height: auto;
-    border-radius: 10px;
-    margin-right: 40px;
-  }
-
-  .info-right {
-    .text-container {
-      display: flex;
-      flex-direction: row;
-
-      .text-left {
-        h3 {
-          font-size: 3rem;
-        }
-        h5 {
-          font-size: 2rem;
-          margin-bottom: 20px;
-        }
-        h4 {
-          font-size: 2.5rem;
-        }
-      }
-
-      .text-right {
-        p {
-          font-size: 2rem;
-          margin-left: 100px;
-          margin-bottom: 20px;
-        }
-      }
-    }
+.profile-container {
+  .user-info {
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-top: 40px;
 
     img {
-      height: 200px;
-      width: auto;
-      margin-top: 40px;
-      border: 1px solid gray;
-      padding: 20px;
+      width: 375px;
+      height: auto;
+      border-radius: 10px;
+      margin-right: 40px;
+    }
+
+    .info-right {
+      .text-container {
+        display: flex;
+        flex-direction: row;
+
+        .text-left {
+          h3 {
+            font-size: 3rem;
+          }
+          h5 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+          }
+          h4 {
+            font-size: 2.5rem;
+          }
+        }
+
+        .text-right {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+          // border: 1px solid red;
+          margin-left: 20px;
+          width: 50%;
+          .p-container {
+            h2 {
+              text-align: center;
+              font-size: 6rem;
+              margin-bottom: 20px;
+            }
+            p {
+              text-align: center;
+              font-size: 2rem;
+            }
+          }
+          // p {
+          //   font-size: 2rem;
+          //   margin-left: 100px;
+          //   margin-bottom: 20px;
+          // }
+        }
+      }
+
+      img {
+        height: 200px;
+        width: auto;
+        margin-top: 40px;
+        border: 1px solid gray;
+        padding: 20px;
+      }
     }
   }
 }
