--- a/github-info/src/styles/sidebar.scss
+++ b/github-info/src/styles/sidebar.scss
@@ -13,9 +13,88 @@
     padding: 20px;
     border-top: 1px solid black;
 
+    a {
+      text-decoration: none;
+    }
+
     p {
-      padding-left: 20px;
-      padding-bottom: 20px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+      padding-top: 10px;
+      margin-bottom: 20px;
+      font-size: 2rem;
+      border: 1px solid gray;
+      background: blue;
+      color: white;
+      border-radius: 5px;
+      text-align: center;
+      padding-right: 10px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .about {
+    color: white;
+    position: absolute;
+    margin-left: 30%;
+    margin-top: -5%;
+    width: 40%;
+    height: auto;
+    background: blue;
+    border-radius: 10px;
+    opacity: 0.95;
+
+    p {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      padding: 10px;
+    }
+
+    .close {
+      text-align: center;
+      text-decoration: underline;
+      background: rgb(187, 11, 11);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .contact {
+    color: white;
+    position: absolute;
+    margin-left: 30%;
+    margin-top: -5%;
+    width: 40%;
+    height: auto;
+    background: blue;
+    border-radius: 10px;
+    opacity: 0.95;
+
+    p {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      padding: 10px;
+      text-align: center;
+    }
+
+    .close {
+      text-align: center;
+      text-decoration: underline;
+      background: rgb(187, 11, 11);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
     }
   }
 }
