--- a/github-info/src/styles/repoCard.scss
+++ b/github-info/src/styles/repoCard.scss
@@ -5,16 +5,25 @@
   padding: 20px;
   border-radius: 5px;
   height: 200px;
+  // height: auto;
   margin-right: 10px;
   margin-bottom: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   h4 {
     font-size: 3rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 10px;
+    // height: 40px;
   }
   h5 {
     font-size: 2rem;
     margin-bottom: 20px;
     height: 30%;
     overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 10px;
   }
   a {
     text-decoration: none;
