--- a/github-info/src/styles/search.scss
+++ b/github-info/src/styles/search.scss
@@ -25,5 +25,9 @@ form {
     font-size: 1.8rem;
     margin-left: 10px;
     // padding: 10px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
